--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "typescript": "^5.2.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@vueuse/motion": "^2.0.0"
   }
 }
