--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@vueuse/motion": "^2.0.0"
+    "@types/node": "^20.8.2",
+    "@types/nodemailer": "^6.4.11",
+    "@vueuse/motion": "^2.0.0",
+    "nodemailer": "^6.9.5"
   }
 }
