--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/eslint-module": "^4.1.0",
+    "@types/better-sqlite3": "^7.6.5",
+    "@types/node": "^20.8.3",
+    "@types/nodemailer": "^6.4.11",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
+    "drizzle-kit": "^0.19.13",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -27,9 +31,10 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@types/node": "^20.8.2",
-    "@types/nodemailer": "^6.4.11",
+    "@libsql/client": "^0.3.5",
     "@vueuse/motion": "^2.0.0",
+    "better-sqlite3": "^8.7.0",
+    "drizzle-orm": "^0.28.6",
     "nodemailer": "^6.9.5"
   }
 }
